--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/AtsushiHayasaka/typescript-for-javascript-developer#readme",
   "devDependencies": {
+    "ts-node": "^10.2.1",
     "typescript": "^4.4.2"
   }
 }
